--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,23 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="toolbar_theme" parent="Widget.AppCompat.Toolbar.Button.Navigation">
+        <item name="android:background">@color/colorPrimary</item>
+    </style>
+
+    <style name="text_title_section" parent="TextAppearance.AppCompat">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:paddingStart">@dimen/dimen_att_detail</item>
+        <item name="android:paddingEnd">@dimen/dimen_att_detail</item>
+        <item name="android:paddingTop">@dimen/dimen_att_detail</item>
+        <item name="android:paddingBottom">@dimen/dimen_att_detail</item>
+    </style>
 </resources>
