GreetActivity. Se usa el endpoint para obtener el texto

--- a/app/src/main/res/layout/activity_greet.xml
+++ b/app/src/main/res/layout/activity_greet.xml
@@ -4,6 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/primaryLightColor"
     tools:context=".ui.greet.GreetActivity">
+
+    <include layout="@layout/actionbar_toolbar" />
+
+    <TextView
+        android:id="@+id/tv_joke"
+        style="@style/text_title_section"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
