--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="@color/primaryLightColor"
     tools:context=".ui.user.UserActivity">
 
     <include layout="@layout/actionbar_toolbar" />
@@ -35,6 +36,7 @@
             android:id="@+id/pb_load"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="false" />
+            android:layout_centerInParent="true"
+            android:visibility="gone"/>
     </RelativeLayout>
 </LinearLayout>
