--- a/app/src/main/res/layout/layout_item_user.xml
+++ b/app/src/main/res/layout/layout_item_user.xml
@@ -5,7 +5,7 @@
     android:id="@+id/item_user"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
+    android:layout_margin="8dp"
     android:elevation="@dimen/cardview_default_elevation"
     app:cardCornerRadius="@dimen/cardview_default_radius"
     tools:ignore="PrivateResource">
@@ -18,7 +18,10 @@
             android:id="@+id/tv_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/app_name" />
+            android:text="@string/app_name"
+            style="@style/TextAppearance.AppCompat.Title"
+            android:layout_margin="@dimen/dimen_att_detail"
+            />
 
         <ImageView
             android:id="@+id/iv_hello"
